     binaries that expect to have one of several names at the moment (e.g.
     when renaming a program to "*-old" or promoting a "*-new" into the
     stable name as a default implementation). Drivers united by `main.c`
     framework introduced a `upsdrv_tweak_prognames()` hook method to let
     them manipulate the array of `prognames[]` aliases. [PR #3101]

 - `nutdrv_qx` driver updates:
   * Define an internal `QX_FLAG_MAPPING_HANDLED` to check if the subdriver
     code (mapping table) and the data found from device walk sit together
     well -- namely, that we successfully use reasonably many of the existing
     mappings. Suggest how user can help improve the driver if too few data
     points were seen. [PR #3095]

 - `powerp-bin` and `powerp-txt` driver updates:
   * Their `upsdrv_initinfo()` methods did not explicitly reference the
     `INSTCMD` and `SETVAR` handler methods (it is unknown whether this
     actually broke anything, or the needed values were deduced from
     subdriver definition then). For consistency, these pointers are now
     assigned. [#1962]

 - `snmp-ups` driver updates:
   * Define an internal `SU_FLAG_MAPPING_HANDLED` to check if the subdriver
     code (mapping table) and the data found from device walk sit together
     well -- namely, that we successfully use reasonably many of the existing
     mappings. Suggest how user can help improve the driver if too few data
     points were seen, or if the `mibs=auto` detection only found the fallback
     IETF mapping. [PR #3095]

 - `tripplite_usb` driver updates:
   * Added support for Tripplite protocol 3017 (mostly ASCII). [issue #2258,
     PR #3093]

 - `usbhid-ups` driver updates:
   * Declared support for APC with USB ID `051d:0005` (details may evolve
     as the devices become better known). [issue #3047, PR #3081]
   * Improved support for Eaton 5S1500LCD and 5S1600LCD (US version). [#2380]
   * For `ups.status` processing, do not assume that `!online`==`offline`,